# bl-sdk-mods

./: .atom-build.yml  .clang-tidy  .clangd  .cruft.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  .typos.toml  CMakeLists.txt  CMakePresets.json  ModMenuBind.py  Readme.md  lint.sh  linters.txt  modinfo.json  mypy.ini  prepare_releases.py  pyproject.toml  requirements.txt  setup.cfg  zipper.ini  zipper.py
.git_hooks/: Readme.md  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
AAA_OptionsWrapper/: Readme.md  __init__.py
AltUseVendors/: Readme.md  __init__.py
AlwaysOffline/: Readme.md  __init__.py
AmmoCheats/: __init__.py
ApplesBorderlandsCheats/: Cheats.py  Presets.py  Readme.md  __init__.py
ApplesBorderlandsCheats/Cheats/: Death.py  Ghost.py  God.py  InfiniteAmmo.py  InstantCooldown.py  InstantKill.py  LevelUp.py  PassiveMode.py  Shops.py  TPTravels.py  __init__.py
AsyncUtil/: Readme.md  SortedDict.py  __init__.py
ChatCrasher/: Readme.md  __init__.py  settings.json
CommandExtensions/: Readme.md  Writing-Mods.md  __init__.py  _zipper.py  builtins.py  file_parser.pyd  file_parser.pyi  sanic.blcm
CommandExtensions/builtins/: __init__.py  chat.py  clone.py  clone_bpd.py  exec_raw.py  keep_alive.py  load_package.py  pyb.py  regen_balance.py  set_early.py  set_material.py  suppress_chat.py  unlock_package.py
CommandExtensions/file_parser_src/: Readme.md  blcmm.cpp  blcmm.hpp  errors.cpp  errors.hpp  main.cpp  parse.cpp  parse.hpp  parser.cpp  parser.hpp  python.cpp  requirements.txt  setup.py
CommandExtensions/file_parser_src/blcmm/: blcmm.hpp
CrowdControl/: Effects.md  Readme.md  __init__.py  install.py  requirements.txt
CrowdControl/Effects/: Chat.py  DropWeapon.py  GodMode.py  HideHUD.py  Jump.py  KillEnemies.py  KillPlayers.py  ManualReloads.py  RechargeActionSkill.py  RefillClip.py  Revive.py  SpawnEnemies.py  SuperSpeed.py  ThrowGrenade.py  __init__.py
CrowdControl/Listener/: TwitchConnection.py  __main__.py
CrowdControl/Native/: _ctypes.pyd
EnemyLevelRandomizer/: Readme.md  __init__.py
Enums/: Readme.md  __init__.py
EquipLocker/: Readme.md  __init__.py
EquipLocker/RestrictionSets/: __init__.py  allegiance.py  rarity.py  weap_item_type.py
FixHotfixes/: Readme.md  __init__.py
HideUndiscoveredMissions/: Readme.md  __init__.py
ILUGen/: BLCMMFile.py  ILUGen.py  Readme.md
ItemLevelUncapper/: Readme.md  __init__.py
Mario/: Readme.md  __init__.py
NoAds/: Readme.md  __init__.py
NoBL3Ads/: Readme.md  __init__.py
NoOfflineWarning/: Readme.md  __init__.py  settings.json
OHKO/: __init__.py
OfflineHelpers/: Readme.md  __init__.py
Onezerker/: Readme.md  __init__.py
PythonPartNotifier/: PartNamer.py  Readme.md  __init__.py
RoundsPerMinute/: Readme.md  __init__.py
SDKAutorun/: Readme.md  __init__.py
SDKAutorun/Tasks/: Console.py  Delay.py  SDKEnable.py  SDKInput.py  __init__.py
SanitySaver/: Readme.md  __init__.py  compression_handler.py  console.py  helpers.py  hooks.py  migrations.py  save_manager.py
ScalingAdjuster/: Readme.md  __init__.py
SideMissionRandomizer/: Readme.md  __init__.py
SpawnMultiplier/: Readme.md  __init__.py
Structs/: Readme.md  __init__.py
TextImages/: Readme.md  gen.py  hackerman.txt  img.txt  show.py
TextModLoader/: Readme.md  __init__.py  _zipper.py  blimp.py  constants.py  loader.py  mod_info.json  settings.py  tml_parser.pyd  tml_parser.pyi
TextModLoader/tml_parser_src/: Readme.md  main.cpp  parse.cpp  parse.hpp  python.cpp  requirements.txt  setup.py
TextModLoader/tml_parser_src/blcmm/: blcmm.cpp
TrueDamageLogger/: Readme.md  __init__.py
UserFeedback/: ChatBox.py  GFxMovie.py  Misc.py  OptionBox.py  Readme.md  ReorderBox.py  TextInputBox.py  TrainingBox.py  UserFeedback.py  __init__.py
bl2parts/: .gitignore  Readme.md  compress_json.py  fix_scav_names.py  gen.py  merge.py  part_names.json  requirements.txt  validate_mesh_overrides.py
bl2parts/tools/: __init__.py  balances.py  data.py  definitions.py  parts.py  prefixes.py
command_extensions/: CMakeLists.txt  Readme.md  Writing-Mods.md  __init__.py  file_parser.pyi  legacy_compat.py  legacy_compat_builtins.py  pyproject.toml  sanic.blcm
command_extensions/builtins/: __init__.py  chat.py  clone.py  clone_bpd.py  exec_raw.py  keep_alive.py  load_package.py  pyb.py  regen_balance.py  set_early.py  suppress_chat.py  unlock_package.py
command_extensions/file_parser/: CMakeLists.txt  blcm_parser.cpp  blcm_parser.h  line_parser.cpp  line_parser.h  main.cpp  matcher.cpp  matcher.h  pch.h
command_extensions/file_parser/blcm_preprocessor/: blcm_preprocessor.cpp  blcm_preprocessor.h
command_extensions/file_parser_tests/: Readme.md  _test.py  corrupt.blcm  pyproject.toml  sanic.blcm.json  test_basic_cmds.blcm.json  test_basic_cmds.blcm.testin  test_basic_cmds.json  test_basic_cmds.testin  test_ce_enableon.blcm.json  test_ce_enableon.blcm.testin  test_ce_enableon.json  test_ce_enableon.testin  test_ce_newcmd.blcm.json  test_ce_newcmd.blcm.testin  test_ce_newcmd.test_in  test_nested_category.blcm.json  test_nested_category.blcm.test_in
no_ads/: Readme.md  __init__.py  pyproject.toml
