[project]
name = "no_ads"
version = "2"
authors = [{ name = "apple1417" }]
description = """\
Prevents ads from showing.
Includes both the obnoxious banner ads as well as the small MoTD DLC ads.
"""

[project.urls]
Changelog = "https://github.com/apple1417/willow2-sdk-mods/blob/master/no_ads/Readme.md"

[tool.sdkmod]
name = "No Ads"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "ClientSide"
download = "https://github.com/apple1417/willow2-sdk-mods/releases/download/nightly/no_ads.sdkmod"
